--- a/trunk/package/Applications/Kirikae.app/doc/release_notes.mdwn
+++ b/trunk/package/Applications/Kirikae.app/doc/release_notes.mdwn
@@ -1,3 +1,9 @@
+> # Version svn.rXX
+> - - -
+> * Added: Can select which tab to start with: Active, Favorites, or Last-used.
+
+- - -
+
 > # Version svn.r91
 > - - -
 > * Fixed: Missing/uninstalled items no longer show as an error in the favorites list.
