When using power hold control method, pressing power button dismisses Kirikae

--- a/trunk/package/Applications/Kirikae.app/doc/release_notes.mdwn
+++ b/trunk/package/Applications/Kirikae.app/doc/release_notes.mdwn
@@ -1,6 +1,7 @@
 > # Version svn.rXX
 > - - -
 > * Added: Can select which tab to start with: Active, Favorites, or Last-used.
+> * Changed: With "power hold" control method, pressing power button now dismisses Kirikae.
 
 - - -
 
