--- a/trunk/package/Applications/Kirikae.app/doc/release_notes.mdwn
+++ b/trunk/package/Applications/Kirikae.app/doc/release_notes.mdwn
@@ -1,4 +1,4 @@
-> # Version svn.rXX
+> # Version svn.r95
 > - - -
 > * Added: Can select which tab to start with: Active, Favorites, or Last-used.
 > * Changed: With "power hold" control method, pressing power button now dismisses Kirikae.
