Updated for release.

--- a/trunk/package/Applications/Kirikae.app/doc/known_issues.mdwn
+++ b/trunk/package/Applications/Kirikae.app/doc/known_issues.mdwn
@@ -1,5 +1,6 @@
 > # Known Issues
 > - - -
+> * Rare, random crash when quitting applications.
 > * Switching between Camera and Photos (and possibly Audio and Video player on iPod Touch) does not work properly; this is due to the fact that they are the same application.
 > * Deleting a running application causes a crash
 > * See the googlecode project page for the latest issue reports.
