--- a/trunk/layout/Applications/Kirikae.app/doc/todo.mdwn
+++ b/trunk/layout/Applications/Kirikae.app/doc/todo.mdwn
@@ -16,8 +16,5 @@
 >     * In other words, the preferences application is here to stay. If you don't like it you can hide the icon and access it via Spotlight.
 > * Add controls for iPod/Pandora/Other application.
 >     * This is beyond the purpose of Kirikae, and would only lead to further such requests, causing code bloat and maintenance nightmares.
-> * Support for triple-tapping to invoke.
->     * Some people have said that even double-tapping is difficult to use. While SpringBoard does now provide methods for triple-tapping in the latest firmware (3.1.*), it is not available in firmware 3.0, which many still use.
-> * Support for swiping/touching the screen to invoke.
->     * The only practical space to use would be the status-bar, which is already used by other popular extensions. Anything outside of the status-bar would interfere with the current application.
->     * That being said, it *is* possible to call Kirikae externally, such as from an SBSettings toggle. If anyone wants to make one, the method to call is "invokeKirikae" (on the SpringBoard application instance).
+> * Support for other invocation methods (triple-tapping, etc.).
+>     * As of release svn.r179, invocation of Kirikae is handled via libactivator. Any requests for additional control methods should be directed to the libactivator developers.
